--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "api-automation",
+  "name": "ui-automation",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js",
-    "test": "node test.js"
+    "start": "node ui.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    
+    "puppeteer": "^19.9.0",
+    "qs": "^6.11.1"
   }
 }
